# poly-trader

./: LICENSE  README.md
agent-operator/: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  main.py  pyproject.toml
poly-paper-trading-api/: .gitignore  account_utils.py  database.py  kalshi_utils.py  main.py  monitoring.py  order_utils.py  pyproject.toml  strategy_utils.py
poly-paper-trading-api/models/: account.py  kalshi_account.py  kalshi_market.py  order.py  position.py  strategy.py  transaction.py
trading-agents/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
trading-agents/agents/: .env.example  agent.py  memory_tools.py  prompts.py  search_agent.py  strategy_tools.py  trading_tools.py  user_tools.py
trading-agents/kalshi_strategy_agent/: agent.py  auth_utils.py  kalshi_tools.py
trading-agents/strategy_agent/: agent.py
