[project]
name = "poly-paper-trading-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "cloud-sql-python-connector[asyncpg]>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]
